April 18, 2006
  - Old method of long titles did not work very well as it made
    old .win files worthless.
April 20, 2006
  - Fix error in sourcing file from GUI.. file should execute at global level.
April 21, 2006
  - Add buffersize selector to event source dialogs.
April 23, 2006
  - Fix typos in  event source dialogs buffersize stuff.
  - Add many credits.
April 26, 2006
  - Added screen dump based printing for the A1900 group and the
    KSU folks who want a wysiwyg printing mechanism.
May 23, 2006
  - Fix defect 195,196: gri was emitting epsf which caused multiple pages
    to smoosh onto a single page, printer.cc: Print setup dialog had a
    widget that duplicated the name of another widget causing it to operate
    funny.
SpecTcl-3.1-001
   - Try to make the docbook builds more robust even in the presence of missing
     or broken(?) docbook installs.
   - configure for libgd.

SpecTcl 3.2-pre1 starts.
  June 20, 2006 defect 206:  Check parameter validity in mask gates.
                             Catch exceptions while histogramming
                Defect 197:  Averaging reduction boxes too large by 
                             1 channel in x.
                Defect 200:  Gamma 1dL spectrum increments no 64 bit clean
                Defect 209:  Mor of the same as 200.
  June 23, 2006 Defect 210:  Problems with scaning ints -> longs.
  June 28, 2006 Xamine has some 64 bit defects as well, these manifest
                           on longword 2d spectra
                Gui has problems if the user makes e.g. a and a.b  fix this.
                Defect 211 - crash if making g1 spectrum with empty parameter 
                             list
  June 29, 2006 Improve performance of terminal parent creation in gui.
                Fix defect in allocatro.c's alignment mask computation that
                causes free list corruption on e.g. 64 bit systems.
  July 5, 2006  Propagate fix for 64 bit problems with mask equal gates.